# Practical-Functional-Analysis-for-Optical-Design-with-Python

./: README.md  pyproject.toml
course_design/: 课程大纲.md
course_repository/: lesson 00.md  lesson 01.md  lesson 02.md  lesson 03.md  lesson 05.md  lesson 06.md  lesson 08.md  lesson 09.md  lesson 11.md  lesson 12.md
manim/: week01-DiscreteToContinuousSurface.py  week01-FermatPrincipleAnimation.py  week01-L2NormVisualization.py  week02-BrachistochroneScene.py  week02-EulerLagrangeDerivation.py  week02-FermatSnellScene.py  week03-Euler-Lagrange-Derivation.py  week03-GradientDescentFunctional.py  week04-ZernikeBasis.py  week05-LinearOperatorTransformations.py  week06-IntegralEquationsMultilayer.py  week07-VariationalMethodsOptimization.py  week08-HilbertSpaceMethods.py  week09-SpectralAnalysis.py  week10-InverseProblems.py  week11-RegularizationTechniques.py  week12-MachineLearningApplications.py  week13-AdvancedTopics.py
python-project/: README.md  advanced_chapters_summary.py  project_summary.md  project_summary.py  remaining_chapters_comprehensive.py  requirements.txt  run_tests.py  test-results.xml.txt
python-project/chapter00_bridge_week/: gradient_inner_product_norm.py  manim_environment_test.py  numpy_matplotlib_practice.py
python-project/chapter01_functional_foundations/: l2_space_light_field_energy.py  lens_distortion_visualization.py
python-project/chapter02_calculus_variations/: fermat_principle_snell_law.py  shortest_path_brachistochrone.py
python-project/chapter03_gradient_descent/: functional_gradient_descent.py
python-project/chapter04_function_spaces/: zernike_polynomials.py  zernike_simple.py
python-project/chapter05_operator_theory/: optical_operators.py  simple_operators.py
python-project/chapter06_integral_equations/: scattering_propagation_equations.py
python-project/chapter07_nonlinear_operators/: nonlinear_optics.py
python-project/chapter08_banach_spaces/: optical_norms.py
python-project/chapter09_weak_convergence/: weak_convergence_optics.py
python-project/chapter10_distribution_theory/: distribution_optics.py
python-project/chapter11_optimization_algorithms/: advanced_optimization_optics.py
python-project/chapter12_uncertainty_quantification/: uncertainty_analysis_optics.py
python-project/chapter13_ai_integration/: ai_optical_design.py
python-project/tests/: __init__.py  conftest.py
python-project/tests/chapter00_bridge_week/: __init__.py  test_gradient_inner_product_norm.py  test_manim_environment_test.py  test_numpy_matplotlib_practice.py
python-project/tests/chapter01_functional_foundations/: __init__.py  test_l2_space_light_field_energy.py  test_lens_distortion_visualization.py
python-project/tests/chapter02_calculus_variations/: __init__.py  test_fermat_principle_snell_law.py  test_shortest_path_brachistochrone.py
python-project/tests/chapter03_gradient_descent/: __init__.py  test_functional_gradient_descent.py
python-project/tests/chapter04_function_spaces/: __init__.py  test_zernike_polynomials.py  test_zernike_simple.py
python-project/tests/chapter05_operator_theory/: __init__.py  test_simple_operators.py
python-project/tests/chapter06_integral_equations/: __init__.py  test_scattering_propagation_equations.py
python-project/tests/chapter07_nonlinear_operators/: __init__.py
python-project/tests/chapter08_banach_spaces/: __init__.py  test_optical_norms.py
python-project/tests/chapter09_weak_convergence/: __init__.py  test_weak_convergence_optics.py
python-project/tests/chapter10_distribution_theory/: __init__.py  run_manim_tests.py  test_distribution_manim.py  test_distribution_optics.py
python-project/tests/chapter11_optimization_algorithms/: __init__.py  test_advanced_optimization_optics.py
python-project/tests/chapter12_uncertainty_quantification/: __init__.py  test_uncertainty_analysis_optics.py
python-project/tests/chapter13_ai_integration/: __init__.py  test_ai_optical_design.py
textbook/: lesson 04.md  lesson 07.md  lesson 10.md  lesson 13.md
